Add basic form elements
This commit adds the basic form elements for the exercise

--- a/src/home.html
+++ b/src/home.html
@@ -3,9 +3,18 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="style.css">
   <title>Document</title>
 </head>
 <body>
-  
+<form novalidate>
+  <input type="email" name="email" id="email">
+  <input type="text" name="country" id="country">
+  <input type="number" name="postalCode" id="postalCode">
+  <input type="password" name="pwd" id="pwd">
+  <input type="password" name="conPwd" id="conPwd">
+ 
+</form> 
 </body>
+<script src="index.js"></script>
 </html>
