Adds password matching verification
This commit adds the ability for the form to match passwords.

--- a/src/home.html
+++ b/src/home.html
@@ -275,7 +275,7 @@
   </div>
   <div class="formEle"> 
     <label for="conPwd">Confirm Password</label><span style="color: red !important; display: inline; float: none;">*</span>
-    <input type="password" name="conPwd" id="conPwd">
+    <input type="password" name="conPwd" id="conPwd" minlength="8" required>
     <span class="error" aria-live="polite"></span>
    </div>
    <button>Submit</button>
